syntax = "proto3";

option go_package = "github.com/fabritsius/investor/aggregator/messages";

service Portfolio {
  rpc GetPortfolio (PortfolioRequest) returns (PortfolioReply) {}
}

message PortfolioRequest {
  map<string, string> options = 1;
}

message PortfolioReply {
  PortfolioStats data = 1;
}

message PortfolioStats {
  Currency currency = 1;
  int64 date = 2;
  repeated StockData stocks = 3;
  PortfolioTotals totals = 4;
}

message StockData {
  map<string, string> ids = 1;
  string name = 2;
  double balance = 3;
  double price = 4;
  double yield = 5;
}

message PortfolioTotals {
  double invested = 1;
	double yield = 2;
}

enum Currency {
  USD = 0;
  RUB = 1;
}
